--- a/aracha5/packages/aracha-theme-glyphs-base/sass/var/Ext/menu/Menu.scss
+++ b/aracha5/packages/aracha-theme-glyphs-base/sass/var/Ext/menu/Menu.scss
@@ -2,10 +2,4 @@
 $menu-item-group-glyph              : $fa-var-check !default;
 $menu-item-checked-glyph            : $fa-var-check-square-o !default;
 $menu-item-unchecked-glyph          : $fa-var-square-o !default;
-
-//$menu-item-arrow-height             : $menu-item-height !default;
-$menu-item-arrow-height             : 14px !default;
 $menu-item-arrow-glyph              : $fa-var-caret-right !default;
-$menu-item-arrow-glyph-font-family  : $glyph-font-family !default;
-$menu-item-arrow-glyph-font-size    : $menu-item-font-size !default;
-$menu-item-arrow-glyph-color        : $color !default;
